# snes-hid

./: .gitignore  README.md  controller.py  controller_hid.py  controller_inputs.py  example_event_handler.py  pyproject.toml  test_controller.py  test_polling.py
emulator/: README.md
emulator/vm/: autoinstall.yaml
src/snes_hid/: __init__.py  button_mapping.json  map_buttons.py  test_polling.py
